# Self_Healing_Scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docker/: api.Dockerfile  worker.Dockerfile
src/api/: main.py
src/core/: config.py
src/healers/: llm_extractor.py  local_quant_healer.py
src/scrapers/: engine.py
src/self_healing_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/workers/: celery_app.py  tasks.py
tests/integration/: test_api.py
tests/unit/: test_healer.py
